# cuprum

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES.md  cliff.toml
.github/workflows/: ci.yml  release.yml
crates/cuprum-cache/: Cargo.toml
crates/cuprum-cache/src/: lib.rs
crates/cuprum-cli/: Cargo.toml
crates/cuprum-cli/src/: main.rs  output.rs
crates/cuprum-cli/src/commands/: check.rs  info.rs  mesh.rs  mod.rs  render.rs  svg.rs
crates/cuprum-cli/tests/: cli.rs
crates/cuprum-core/: Cargo.toml
crates/cuprum-core/benches/: board_metrics.rs
crates/cuprum-core/src/: artifact.rs  cache.rs  cal.rs  compose.rs  conductor.rs  diskcache.rs  drill.rs  geometry.rs  gerber.rs  goo.rs  lib.rs  mesh.rs  metrics.rs  preview.rs  svg.rs  trace.rs
crates/cuprum-core/src/dfm/: metrics.rs  mod.rs  sweep.rs
crates/cuprum-core/src/dfm/metrics/: aggregate.rs  copper.rs  drill.rs  geo.rs  mod.rs  parse.rs  types.rs
crates/cuprum-core/src/dfm/sweep/: edges.rs  mod.rs  neck.rs  scan.rs  segments.rs
crates/cuprum-core/src/sdcp/: client.rs  discovery.rs  upload.rs
crates/cuprum-dfm/: Cargo.toml
crates/cuprum-dfm/src/: conductor.rs  gate.rs  isolation.rs  lib.rs
crates/cuprum-dfm/src/metrics/: aggregate.rs  copper.rs  drill.rs  geo.rs  mod.rs  parse.rs  tests.rs  types.rs
crates/cuprum-dfm/src/sweep/: edges.rs  mod.rs  neck.rs  scan.rs  segments.rs
crates/cuprum-diskcache/: Cargo.toml
crates/cuprum-diskcache/src/: artifact.rs  lib.rs
crates/cuprum-diskcache/src/diskcache/: hash.rs  mod.rs  store.rs
crates/cuprum-drill/: Cargo.toml
crates/cuprum-drill/src/: estimate.rs  gcode.rs  geom.rs  lib.rs  plan.rs  registration.rs  route.rs  types.rs
crates/cuprum-gerber/: Cargo.toml
crates/cuprum-gerber/src/: geometry.rs  gerber.rs  lib.rs  strokes.rs  svg.rs
crates/cuprum-gerber/src/geometry/: build.rs  isolation.rs  measure.rs  mod.rs  tess.rs
crates/cuprum-gerber/src/viewer/: expressions.rs  layer.rs  mod.rs  spacial.rs  testing.rs  types.rs
crates/cuprum-gerber/src/viewer/geometry/: bounding_box.rs  mirroring.rs  mod.rs  shapes.rs  transform.rs
crates/cuprum-gerber/src/viewer/layer/: bbox.rs  primitive.rs
crates/cuprum-goo/: Cargo.toml
crates/cuprum-goo/src/: lib.rs
crates/cuprum-grbl/: Cargo.toml
crates/cuprum-grbl/src/: actor.rs  command.rs  connection.rs  lib.rs  parse.rs
crates/cuprum-mesh/: Cargo.toml
crates/cuprum-mesh/src/: build.rs  emit.rs  export.rs  lib.rs  outline.rs
crates/cuprum-mill/: Cargo.toml
crates/cuprum-mill/src/: estimate.rs  gcode.rs  lib.rs  plan.rs  types.rs
crates/cuprum-nest/: Cargo.toml
crates/cuprum-nest/src/: lib.rs
crates/cuprum-project/: Cargo.toml
crates/cuprum-project/src/: catalog.rs  container.rs  history.rs  import.rs  layer.rs  lib.rs  manifest.rs  panel.rs  resolve.rs  workdir.rs
crates/cuprum-project/src/document/: container.rs  history.rs  manifest.rs  migrate.rs  mod.rs  panel.rs  workdir.rs
crates/cuprum-project/src/document/migrate/: steps.rs
crates/cuprum-sdcp/: Cargo.toml
crates/cuprum-sdcp/src/: client.rs  discovery.rs  lib.rs  upload.rs
crates/cuprum-trace/: Cargo.toml
crates/cuprum-trace/src/: config.rs  layer.rs  lib.rs  session.rs  sink.rs
cuprum-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
cuprum-ui/scripts/: i18n-check.mjs
cuprum-ui/src/: App.tsx  artifactsStore.ts  drillRunStore.test.ts  drillRunStore.ts  historyStore.test.ts  historyStore.ts  keepOutSelectionStore.ts  machineStore.ts  main.tsx  navigationStore.ts  panelSelectionStore.test.ts  panelSelectionStore.ts  panelToolStore.ts  settingsStore.test.ts  settingsStore.ts  shellStore.test.ts  shellStore.ts  store.test.ts  store.ts  styles.css  styles.test.ts  updaterStore.ts  workZeroMethodStore.ts
cuprum-ui/src-tauri/: Cargo.toml  target  tauri.conf.json
cuprum-ui/src-tauri/capabilities/: default.json
cuprum-ui/src-tauri/icons/: icon.icns
cuprum-ui/src-tauri/src/: main.rs
cuprum-ui/src-tauri/src/commands/: board.rs  crash.rs  drill_run.rs  error.rs  expose_run.rs  fiducial.rs  machine.rs  mill_run.rs  mod.rs  operation_log.rs  panel.rs  printer.rs  project.rs  render.rs  windows.rs
cuprum-ui/src/components/: CrashPrompt.tsx  ErrorBoundary.tsx  UpdateBanner.tsx
cuprum-ui/src/hooks/: useAddDesignBridge.ts  useConsoleBridge.ts  useConsoleClient.ts  useConsoleFollower.ts  useCrosshairState.ts  useDesignPreviewImages.test.ts  useDesignPreviewImages.ts  useDesignVerdict.ts  useDrillBridge.ts  useDrillGates.ts  useDrillHoleHover.ts  useDrillMachineFollower.ts  useDrillPhaseProgress.ts  useDrillPlan.ts  useDrillProgressRing.ts  useDrillRun.ts  useDrillRunLiveListeners.ts  useDrillScreenData.ts  useDrillTimingTrace.ts  useExposeBridge.ts  useExposeScreenData.ts  useFindingText.ts  useFlag.ts  useInspectorBridge.ts  useJog.ts  useJogHotkeys.ts  useKonvaViewport.ts  useLayerClassification.ts  useMachineBridge.ts  useMachinePosition.ts  useMillBridge.ts  useMillPlan.ts  useMillScreenData.ts  usePanelContextActions.ts  usePanelFindings.ts  usePanelKeyHandlers.ts  usePanelSnapHoles.ts  usePlacedBoardSizes.ts  usePreviewData.ts  useReportPanelVerdict.ts  (+3 more)
cuprum-ui/src/i18n/: index.ts  react-i18next.d.ts  relativeTime.test.ts  relativeTime.ts  resolveLanguage.test.ts  resolveLanguage.ts  resources.ts  unitFormat.test.ts  unitFormat.ts  useUnitFormat.ts
cuprum-ui/src/lib/: addDesignSnapshot.ts  alignmentPoints.test.ts  alignmentPoints.ts  api.ts  artifactProgress.test.ts  artifactProgress.ts  boardMesh.test.ts  boardMesh.ts  boardOutline.test.ts  boardOutline.ts  canvasTicks.test.ts  canvasTicks.ts  capabilityProfile.ts  cncProfile.ts  consoleHistory.test.ts  consoleHistory.ts  consoleRelay.test.ts  consoleRelay.ts  crashReport.test.ts  crashReport.ts  datum.test.ts  datum.ts  designSummary.test.ts  designSummary.ts  drcIssues.test.ts  drcIssues.ts  drcMarkers.test.ts  (+131 more)
docs/: DESIGN.md  DEVELOPMENT.md  GLOSSARY.md  PROJECT.md  ROADMAP.md  VISION.md
scripts/: set-version.sh
spikes/: discover.py  discovery_response.json  ws_dump.json  ws_dump.py
(+236 files in other folders)
