[workspace]
resolver = "2"
members = ["crates/cuprum-core", "crates/cuprum-cli", "crates/cuprum-project", "crates/cuprum-trace", "crates/cuprum-diskcache", "crates/cuprum-cache", "crates/cuprum-goo", "crates/cuprum-gerber", "crates/cuprum-mesh", "crates/cuprum-dfm", "crates/cuprum-sdcp"]
# cuprum-ui/src-tauri is its own workspace (heavy tauri deps) — keep core/CLI builds fast
exclude = ["cuprum-ui/src-tauri"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cuprum-core = { path = "crates/cuprum-core" }
cuprum-project = { path = "crates/cuprum-project" }
cuprum-trace = { path = "crates/cuprum-trace" }
cuprum-diskcache = { path = "crates/cuprum-diskcache" }
cuprum-cache = { path = "crates/cuprum-cache" }
cuprum-goo = { path = "crates/cuprum-goo" }
cuprum-gerber = { path = "crates/cuprum-gerber" }
cuprum-mesh = { path = "crates/cuprum-mesh" }
cuprum-dfm = { path = "crates/cuprum-dfm" }
cuprum-sdcp = { path = "crates/cuprum-sdcp" }
goo = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lru = "0.12"
md-5 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1", features = ["v4"] }
tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }
ctrlc = "3"
gerber_types = { package = "gerber-types", version = "0.7" }
gerber_parser = { package = "gerber_parser", version = "0.5" }
nalgebra = { version = "0.34", default-features = false }
thiserror = "2"
log = "0.4"
rstest = "0.23"
approx = "0.5"
env_logger = "0.11"
tiny-skia = "0.12"
resvg = "0.45"
usvg = "0.45"
rayon = "1"
png = "0.17"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
crc32fast = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
