[package]
name = "cuprum-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Cuprum: drive an Elegoo Saturn 4 Ultra 16K as a UV PCB exposure unit"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
lru.workspace = true
gerber_viewer.workspace = true
resvg.workspace = true
usvg.workspace = true
rayon.workspace = true
i_overlay = "4"
earcutr = "0.4"
cuprum-trace.workspace = true
cuprum-diskcache.workspace = true
cuprum-cache.workspace = true
cuprum-goo.workspace = true
cuprum-gerber.workspace = true
cuprum-sdcp.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "board_metrics"
harness = false
