[package]
name = "cuprum-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Cuprum: drive an Elegoo Saturn 4 Ultra 16K as a UV PCB exposure unit"

[dependencies]
anyhow.workspace = true
serde.workspace = true
resvg.workspace = true
usvg.workspace = true
rayon.workspace = true
cuprum-trace.workspace = true
cuprum-diskcache.workspace = true
cuprum-goo.workspace = true
cuprum-gerber.workspace = true
cuprum-mesh.workspace = true
cuprum-dfm.workspace = true
cuprum-sdcp.workspace = true
cuprum-grbl.workspace = true
cuprum-drill.workspace = true
cuprum-mill.workspace = true
tracing.workspace = true
png.workspace = true
imagequant.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "board_metrics"
harness = false
