[package]
name = "cuprum-diskcache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Content-keyed on-disk cache and artifact versioning/GC for Cuprum"

[dependencies]
tracing.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
cuprum-trace.workspace = true
serde_json.workspace = true
