[package]
name = "cuprum-project"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cuprum project model: .cuprum container and recents catalog"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
zip.workspace = true
tracing.workspace = true
cuprum-core = { path = "../cuprum-core" }
