[package]
name = "cuprum-sdcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDCP client for Elegoo/Chitu UV printers: discovery, control, file upload"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
md-5.workspace = true
reqwest.workspace = true
tungstenite.workspace = true
