[package]
name = "cuprum-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Opt-in Chrome-Trace profiling for Cuprum's heavy pipeline phases"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[dev-dependencies]
rayon.workspace = true
